--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,5 +5,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="fr.mycompany.superquiz.WelcomeFragment"
+    android:name="fr.mycompany.superquiz.ui.WelcomeFragment"
     tools:layout="@layout/fragment_welcome" />
